# os-normalizer

./: CHANGELOG.md  README.md  RELEASING.md  noxfile.py  os_normalizer.py  pyproject.toml  test_os_normalizer.py  test_parser_structure.py  test_static.py
os_fingerprint/: __init__.py  constants.py  helpers.py  models.py  orchestrator.py
os_fingerprint/parsers/: __init__.py  bsd.py  linux.py  macos.py  mobile.py  network.py  windows.py
os_fingerprint/parsers/network/: __init__.py  cisco.py  fortinet.py  huawei.py  juniper.py  netgear.py
os_normalizer/: __init__.py  constants.py  cpe.py  helpers.py  models.py  os_normalizer.py
os_normalizer/parsers/: bsd.py  linux.py  macos.py  mobile.py  windows.py
os_normalizer/parsers/network/: __init__.py  cisco.py  fortinet.py  huawei.py  juniper.py  netgear.py
tests/: case_utils.py  test_bsd.py  test_cpe.py  test_esxi.py  test_full.py  test_linux.py  test_macos.py  test_merge.py  test_mobile.py  test_network.py  test_os_normalizer.py  test_solaris.py  test_static.py  test_str_repr.py  test_windows.py
