[project]
name = "os-fingerprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.10",
]


[tool.ruff]
line-length = 120
target-version = "py313"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D400",
    "D415",
    "T201",
]
