[project]
name = "os-normalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "ruff>=0.12.10",
]


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D203",
    "D213",
    "D400",
    "D415",
    "S101",
    "T201",
    "COM812",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
